# lily_base
set(BASE_SRC
    ${CMAKE_SOURCE_DIR}/src/base/allocator.c
    ${CMAKE_SOURCE_DIR}/src/base/alloc.c
    ${CMAKE_SOURCE_DIR}/src/base/arc.c
    ${CMAKE_SOURCE_DIR}/src/base/atof.c
    ${CMAKE_SOURCE_DIR}/src/base/atoi.c
    ${CMAKE_SOURCE_DIR}/src/base/binary_heap.c
    ${CMAKE_SOURCE_DIR}/src/base/binary_search.c
    ${CMAKE_SOURCE_DIR}/src/base/bitmap.c
    ${CMAKE_SOURCE_DIR}/src/base/buffer.c
    ${CMAKE_SOURCE_DIR}/src/base/char.c
    ${CMAKE_SOURCE_DIR}/src/base/dup.c
    ${CMAKE_SOURCE_DIR}/src/base/cli/args.c
    ${CMAKE_SOURCE_DIR}/src/base/cli/command.c
    ${CMAKE_SOURCE_DIR}/src/base/cli/default_action.c
    ${CMAKE_SOURCE_DIR}/src/base/cli/diagnostic.c
    ${CMAKE_SOURCE_DIR}/src/base/cli/help.c
    ${CMAKE_SOURCE_DIR}/src/base/cli/option.c
    ${CMAKE_SOURCE_DIR}/src/base/cli/value.c
    ${CMAKE_SOURCE_DIR}/src/base/cli/result/option.c
    ${CMAKE_SOURCE_DIR}/src/base/cli/result/value.c
    ${CMAKE_SOURCE_DIR}/src/base/cli/result.c
    ${CMAKE_SOURCE_DIR}/src/base/cli.c
    ${CMAKE_SOURCE_DIR}/src/base/color.c
    ${CMAKE_SOURCE_DIR}/src/base/command.c
    ${CMAKE_SOURCE_DIR}/src/base/dir.c
    ${CMAKE_SOURCE_DIR}/src/base/env.c
    ${CMAKE_SOURCE_DIR}/src/base/error.c
    ${CMAKE_SOURCE_DIR}/src/base/fd.c
    ${CMAKE_SOURCE_DIR}/src/base/file.c
    ${CMAKE_SOURCE_DIR}/src/base/format.c
    ${CMAKE_SOURCE_DIR}/src/base/fork.c
    ${CMAKE_SOURCE_DIR}/src/base/fs_watcher.c
    ${CMAKE_SOURCE_DIR}/src/base/hash/custom.c
    ${CMAKE_SOURCE_DIR}/src/base/hash/fnv.c
    ${CMAKE_SOURCE_DIR}/src/base/hash/jenkins.c
    ${CMAKE_SOURCE_DIR}/src/base/hash/sip.c
    ${CMAKE_SOURCE_DIR}/src/base/hash_map.c
    ${CMAKE_SOURCE_DIR}/src/base/hash_set.c
    ${CMAKE_SOURCE_DIR}/src/base/heap.c
    ${CMAKE_SOURCE_DIR}/src/base/int128.c
    ${CMAKE_SOURCE_DIR}/src/base/io.c
    ${CMAKE_SOURCE_DIR}/src/base/itoa.c
    ${CMAKE_SOURCE_DIR}/src/base/linked_list.c
    ${CMAKE_SOURCE_DIR}/src/base/list.c
    ${CMAKE_SOURCE_DIR}/src/base/memory/api.c
    ${CMAKE_SOURCE_DIR}/src/base/memory/arena.c
    ${CMAKE_SOURCE_DIR}/src/base/memory/block.c
    ${CMAKE_SOURCE_DIR}/src/base/memory/global.c
    ${CMAKE_SOURCE_DIR}/src/base/memory/page.c
    ${CMAKE_SOURCE_DIR}/src/base/mutex.c
    ${CMAKE_SOURCE_DIR}/src/base/non_null.c
    ${CMAKE_SOURCE_DIR}/src/base/object/schema.c
    ${CMAKE_SOURCE_DIR}/src/base/object/value.c
    ${CMAKE_SOURCE_DIR}/src/base/object/value/list.c
    ${CMAKE_SOURCE_DIR}/src/base/object/value/object.c
    ${CMAKE_SOURCE_DIR}/src/base/optional.c
    ${CMAKE_SOURCE_DIR}/src/base/ordered_hash_map.c
    ${CMAKE_SOURCE_DIR}/src/base/path.c
    ${CMAKE_SOURCE_DIR}/src/base/pipe.c
    ${CMAKE_SOURCE_DIR}/src/base/queue.c
    ${CMAKE_SOURCE_DIR}/src/base/quick_select.c
    ${CMAKE_SOURCE_DIR}/src/base/quick_sort.c
    ${CMAKE_SOURCE_DIR}/src/base/rc.c
    ${CMAKE_SOURCE_DIR}/src/base/ref.c
    ${CMAKE_SOURCE_DIR}/src/base/ref_mut.c
    ${CMAKE_SOURCE_DIR}/src/base/ref_non_null.c
    ${CMAKE_SOURCE_DIR}/src/base/result.c
    ${CMAKE_SOURCE_DIR}/src/base/singleton.c
    ${CMAKE_SOURCE_DIR}/src/base/sized_array.c
    ${CMAKE_SOURCE_DIR}/src/base/sized_str.c
    ${CMAKE_SOURCE_DIR}/src/base/stack.c
    ${CMAKE_SOURCE_DIR}/src/base/str.c
    ${CMAKE_SOURCE_DIR}/src/base/string.c
    ${CMAKE_SOURCE_DIR}/src/base/test.c
    ${CMAKE_SOURCE_DIR}/src/base/tree.c
    ${CMAKE_SOURCE_DIR}/src/base/tree_map.c
    ${CMAKE_SOURCE_DIR}/src/base/vec.c
    ${CMAKE_SOURCE_DIR}/src/base/vec_bit.c
    ${CMAKE_SOURCE_DIR}/src/base/yaml.c)

add_library(lily_base STATIC ${BASE_SRC}
                             ${CMAKE_SOURCE_DIR}/src/ex/lib/lily_base.c)
target_link_libraries(lily_base PRIVATE lily_builtin lily_libyaml)
target_include_directories(lily_base PRIVATE ${LILY_INCLUDE})
