add_subdirectory(${CMAKE_SOURCE_DIR}/src/core/lily/analysis)
add_subdirectory(${CMAKE_SOURCE_DIR}/src/core/lily/compiler)
add_subdirectory(${CMAKE_SOURCE_DIR}/src/core/lily/diagnostic)
add_subdirectory(${CMAKE_SOURCE_DIR}/src/core/lily/functions)
add_subdirectory(${CMAKE_SOURCE_DIR}/src/core/lily/interpreter)
add_subdirectory(${CMAKE_SOURCE_DIR}/src/core/lily/mir)
add_subdirectory(${CMAKE_SOURCE_DIR}/src/core/lily/package)
add_subdirectory(${CMAKE_SOURCE_DIR}/src/core/lily/parser)
add_subdirectory(${CMAKE_SOURCE_DIR}/src/core/lily/precompiler)
add_subdirectory(${CMAKE_SOURCE_DIR}/src/core/lily/preparser)
add_subdirectory(${CMAKE_SOURCE_DIR}/src/core/lily/scanner)
add_subdirectory(${CMAKE_SOURCE_DIR}/src/core/lily/shared)
