# lily_core_lily_analysis
set(LILY_CORE_LILY_ANALYSIS_SRC
    ${CMAKE_SOURCE_DIR}/src/core/lily/analysis/checked/body/class.c
    ${CMAKE_SOURCE_DIR}/src/core/lily/analysis/checked/body/enum_object.c
    ${CMAKE_SOURCE_DIR}/src/core/lily/analysis/checked/body/fun.c
    ${CMAKE_SOURCE_DIR}/src/core/lily/analysis/checked/body/record_object.c
    ${CMAKE_SOURCE_DIR}/src/core/lily/analysis/checked/body/trait.c
    ${CMAKE_SOURCE_DIR}/src/core/lily/analysis/checked/decl/alias.c
    ${CMAKE_SOURCE_DIR}/src/core/lily/analysis/checked/decl/attribute.c
    ${CMAKE_SOURCE_DIR}/src/core/lily/analysis/checked/decl/class.c
    ${CMAKE_SOURCE_DIR}/src/core/lily/analysis/checked/decl/constant.c
    ${CMAKE_SOURCE_DIR}/src/core/lily/analysis/checked/decl/enum.c
    ${CMAKE_SOURCE_DIR}/src/core/lily/analysis/checked/decl/enum_object.c
    ${CMAKE_SOURCE_DIR}/src/core/lily/analysis/checked/decl/error.c
    ${CMAKE_SOURCE_DIR}/src/core/lily/analysis/checked/decl/fun.c
    ${CMAKE_SOURCE_DIR}/src/core/lily/analysis/checked/decl/method.c
    ${CMAKE_SOURCE_DIR}/src/core/lily/analysis/checked/decl/module.c
    ${CMAKE_SOURCE_DIR}/src/core/lily/analysis/checked/decl/object.c
    ${CMAKE_SOURCE_DIR}/src/core/lily/analysis/checked/decl/prototype.c
    ${CMAKE_SOURCE_DIR}/src/core/lily/analysis/checked/decl/record.c
    ${CMAKE_SOURCE_DIR}/src/core/lily/analysis/checked/decl/record_object.c
    ${CMAKE_SOURCE_DIR}/src/core/lily/analysis/checked/decl/trait.c
    ${CMAKE_SOURCE_DIR}/src/core/lily/analysis/checked/decl/type.c
    ${CMAKE_SOURCE_DIR}/src/core/lily/analysis/checked/expr/access.c
    ${CMAKE_SOURCE_DIR}/src/core/lily/analysis/checked/expr/array.c
    ${CMAKE_SOURCE_DIR}/src/core/lily/analysis/checked/expr/binary.c
    ${CMAKE_SOURCE_DIR}/src/core/lily/analysis/checked/expr/call.c
    ${CMAKE_SOURCE_DIR}/src/core/lily/analysis/checked/expr/cast.c
    ${CMAKE_SOURCE_DIR}/src/core/lily/analysis/checked/expr/compiler_fun.c
    ${CMAKE_SOURCE_DIR}/src/core/lily/analysis/checked/expr/lambda.c
    ${CMAKE_SOURCE_DIR}/src/core/lily/analysis/checked/expr/list.c
    ${CMAKE_SOURCE_DIR}/src/core/lily/analysis/checked/expr/literal.c
    ${CMAKE_SOURCE_DIR}/src/core/lily/analysis/checked/expr/tuple.c
    ${CMAKE_SOURCE_DIR}/src/core/lily/analysis/checked/expr/unary.c
    ${CMAKE_SOURCE_DIR}/src/core/lily/analysis/checked/pattern/array.c
    ${CMAKE_SOURCE_DIR}/src/core/lily/analysis/checked/pattern/as.c
    ${CMAKE_SOURCE_DIR}/src/core/lily/analysis/checked/pattern/error.c
    ${CMAKE_SOURCE_DIR}/src/core/lily/analysis/checked/pattern/list_head.c
    ${CMAKE_SOURCE_DIR}/src/core/lily/analysis/checked/pattern/list_tail.c
    ${CMAKE_SOURCE_DIR}/src/core/lily/analysis/checked/pattern/list.c
    ${CMAKE_SOURCE_DIR}/src/core/lily/analysis/checked/pattern/literal.c
    ${CMAKE_SOURCE_DIR}/src/core/lily/analysis/checked/pattern/name.c
    ${CMAKE_SOURCE_DIR}/src/core/lily/analysis/checked/pattern/range.c
    ${CMAKE_SOURCE_DIR}/src/core/lily/analysis/checked/pattern/record_call.c
    ${CMAKE_SOURCE_DIR}/src/core/lily/analysis/checked/pattern/table.c
    ${CMAKE_SOURCE_DIR}/src/core/lily/analysis/checked/pattern/tuple.c
    ${CMAKE_SOURCE_DIR}/src/core/lily/analysis/checked/pattern/variant_call.c
    ${CMAKE_SOURCE_DIR}/src/core/lily/analysis/checked/stmt/asm.c
    ${CMAKE_SOURCE_DIR}/src/core/lily/analysis/checked/stmt/await.c
    ${CMAKE_SOURCE_DIR}/src/core/lily/analysis/checked/stmt/block.c
    ${CMAKE_SOURCE_DIR}/src/core/lily/analysis/checked/stmt/break.c
    ${CMAKE_SOURCE_DIR}/src/core/lily/analysis/checked/stmt/drop.c
    ${CMAKE_SOURCE_DIR}/src/core/lily/analysis/checked/stmt/for.c
    ${CMAKE_SOURCE_DIR}/src/core/lily/analysis/checked/stmt/if.c
    ${CMAKE_SOURCE_DIR}/src/core/lily/analysis/checked/stmt/match.c
    ${CMAKE_SOURCE_DIR}/src/core/lily/analysis/checked/stmt/next.c
    ${CMAKE_SOURCE_DIR}/src/core/lily/analysis/checked/stmt/raise.c
    ${CMAKE_SOURCE_DIR}/src/core/lily/analysis/checked/stmt/return.c
    ${CMAKE_SOURCE_DIR}/src/core/lily/analysis/checked/stmt/switch.c
    ${CMAKE_SOURCE_DIR}/src/core/lily/analysis/checked/stmt/try.c
    ${CMAKE_SOURCE_DIR}/src/core/lily/analysis/checked/stmt/unsafe.c
    ${CMAKE_SOURCE_DIR}/src/core/lily/analysis/checked/stmt/variable.c
    ${CMAKE_SOURCE_DIR}/src/core/lily/analysis/checked/stmt/while.c
    ${CMAKE_SOURCE_DIR}/src/core/lily/analysis/checked/access.c
    ${CMAKE_SOURCE_DIR}/src/core/lily/analysis/checked/captured_variable.c
    ${CMAKE_SOURCE_DIR}/src/core/lily/analysis/checked/compiler_generic.c
    ${CMAKE_SOURCE_DIR}/src/core/lily/analysis/checked/data_type.c
    ${CMAKE_SOURCE_DIR}/src/core/lily/analysis/checked/decl.c
    ${CMAKE_SOURCE_DIR}/src/core/lily/analysis/checked/expr.c
    ${CMAKE_SOURCE_DIR}/src/core/lily/analysis/checked/field.c
    ${CMAKE_SOURCE_DIR}/src/core/lily/analysis/checked/field_object.c
    ${CMAKE_SOURCE_DIR}/src/core/lily/analysis/checked/generic_param.c
    ${CMAKE_SOURCE_DIR}/src/core/lily/analysis/checked/global_name.c
    ${CMAKE_SOURCE_DIR}/src/core/lily/analysis/checked/history.c
    ${CMAKE_SOURCE_DIR}/src/core/lily/analysis/checked/impl_param.c
    ${CMAKE_SOURCE_DIR}/src/core/lily/analysis/checked/inherit_param.c
    ${CMAKE_SOURCE_DIR}/src/core/lily/analysis/checked/operator.c
    ${CMAKE_SOURCE_DIR}/src/core/lily/analysis/checked/operator_register.c
    ${CMAKE_SOURCE_DIR}/src/core/lily/analysis/checked/parent.c
    ${CMAKE_SOURCE_DIR}/src/core/lily/analysis/checked/pattern.c
    ${CMAKE_SOURCE_DIR}/src/core/lily/analysis/checked/safety_mode.c
    ${CMAKE_SOURCE_DIR}/src/core/lily/analysis/checked/scope.c
    ${CMAKE_SOURCE_DIR}/src/core/lily/analysis/checked/scope_container.c
    ${CMAKE_SOURCE_DIR}/src/core/lily/analysis/checked/scope_decls.c
    ${CMAKE_SOURCE_DIR}/src/core/lily/analysis/checked/scope_response.c
    ${CMAKE_SOURCE_DIR}/src/core/lily/analysis/checked/scope_stmt.c
    ${CMAKE_SOURCE_DIR}/src/core/lily/analysis/checked/signature.c
    ${CMAKE_SOURCE_DIR}/src/core/lily/analysis/checked/stmt.c
    ${CMAKE_SOURCE_DIR}/src/core/lily/analysis/checked/variant.c
    ${CMAKE_SOURCE_DIR}/src/core/lily/analysis/checked/virtual_scope.c
    ${CMAKE_SOURCE_DIR}/src/core/lily/analysis/checked/virtual_variable_manager.c
    ${CMAKE_SOURCE_DIR}/src/core/lily/analysis/analysis.c)

add_library(
  lily_core_lily_analysis STATIC
  ${LILY_CORE_LILY_ANALYSIS_SRC}
  ${CMAKE_SOURCE_DIR}/src/ex/lib/lily_core_lily_analysis.c)
target_link_libraries(lily_core_lily_analysis PRIVATE lily_core_lily_functions)
target_include_directories(lily_core_lily_analysis PRIVATE ${LILY_INCLUDE})
