# lily_core_lily_parser
set(LILY_CORE_LILY_PARSER_SRC
    ${CMAKE_SOURCE_DIR}/src/core/lily/parser/ast/body/class.c
    ${CMAKE_SOURCE_DIR}/src/core/lily/parser/ast/body/enum_object.c
    ${CMAKE_SOURCE_DIR}/src/core/lily/parser/ast/body/fun.c
    ${CMAKE_SOURCE_DIR}/src/core/lily/parser/ast/body/record_object.c
    ${CMAKE_SOURCE_DIR}/src/core/lily/parser/ast/body/trait.c
    ${CMAKE_SOURCE_DIR}/src/core/lily/parser/ast/decl/alias.c
    ${CMAKE_SOURCE_DIR}/src/core/lily/parser/ast/decl/attribute.c
    ${CMAKE_SOURCE_DIR}/src/core/lily/parser/ast/decl/class.c
    ${CMAKE_SOURCE_DIR}/src/core/lily/parser/ast/decl/constant.c
    ${CMAKE_SOURCE_DIR}/src/core/lily/parser/ast/decl/enum.c
    ${CMAKE_SOURCE_DIR}/src/core/lily/parser/ast/decl/enum_object.c
    ${CMAKE_SOURCE_DIR}/src/core/lily/parser/ast/decl/error.c
    ${CMAKE_SOURCE_DIR}/src/core/lily/parser/ast/decl/fun.c
    ${CMAKE_SOURCE_DIR}/src/core/lily/parser/ast/decl/include.c
    ${CMAKE_SOURCE_DIR}/src/core/lily/parser/ast/decl/method.c
    ${CMAKE_SOURCE_DIR}/src/core/lily/parser/ast/decl/module.c
    ${CMAKE_SOURCE_DIR}/src/core/lily/parser/ast/decl/object.c
    ${CMAKE_SOURCE_DIR}/src/core/lily/parser/ast/decl/prototype.c
    ${CMAKE_SOURCE_DIR}/src/core/lily/parser/ast/decl/record.c
    ${CMAKE_SOURCE_DIR}/src/core/lily/parser/ast/decl/record_object.c
    ${CMAKE_SOURCE_DIR}/src/core/lily/parser/ast/decl/trait.c
    ${CMAKE_SOURCE_DIR}/src/core/lily/parser/ast/decl/type.c
    ${CMAKE_SOURCE_DIR}/src/core/lily/parser/ast/decl/use.c
    ${CMAKE_SOURCE_DIR}/src/core/lily/parser/ast/expr/access.c
    ${CMAKE_SOURCE_DIR}/src/core/lily/parser/ast/expr/array.c
    ${CMAKE_SOURCE_DIR}/src/core/lily/parser/ast/expr/binary.c
    ${CMAKE_SOURCE_DIR}/src/core/lily/parser/ast/expr/call.c
    ${CMAKE_SOURCE_DIR}/src/core/lily/parser/ast/expr/cast.c
    ${CMAKE_SOURCE_DIR}/src/core/lily/parser/ast/expr/identifier.c
    ${CMAKE_SOURCE_DIR}/src/core/lily/parser/ast/expr/lambda.c
    ${CMAKE_SOURCE_DIR}/src/core/lily/parser/ast/expr/list.c
    ${CMAKE_SOURCE_DIR}/src/core/lily/parser/ast/expr/literal.c
    ${CMAKE_SOURCE_DIR}/src/core/lily/parser/ast/expr/try.c
    ${CMAKE_SOURCE_DIR}/src/core/lily/parser/ast/expr/tuple.c
    ${CMAKE_SOURCE_DIR}/src/core/lily/parser/ast/expr/unary.c
    ${CMAKE_SOURCE_DIR}/src/core/lily/parser/ast/pattern/array.c
    ${CMAKE_SOURCE_DIR}/src/core/lily/parser/ast/pattern/as.c
    ${CMAKE_SOURCE_DIR}/src/core/lily/parser/ast/pattern/error.c
    ${CMAKE_SOURCE_DIR}/src/core/lily/parser/ast/pattern/list.c
    ${CMAKE_SOURCE_DIR}/src/core/lily/parser/ast/pattern/list_head.c
    ${CMAKE_SOURCE_DIR}/src/core/lily/parser/ast/pattern/list_tail.c
    ${CMAKE_SOURCE_DIR}/src/core/lily/parser/ast/pattern/literal.c
    ${CMAKE_SOURCE_DIR}/src/core/lily/parser/ast/pattern/name.c
    ${CMAKE_SOURCE_DIR}/src/core/lily/parser/ast/pattern/range.c
    ${CMAKE_SOURCE_DIR}/src/core/lily/parser/ast/pattern/record_call.c
    ${CMAKE_SOURCE_DIR}/src/core/lily/parser/ast/pattern/tuple.c
    ${CMAKE_SOURCE_DIR}/src/core/lily/parser/ast/pattern/variant_call.c
    ${CMAKE_SOURCE_DIR}/src/core/lily/parser/ast/stmt/asm.c
    ${CMAKE_SOURCE_DIR}/src/core/lily/parser/ast/stmt/await.c
    ${CMAKE_SOURCE_DIR}/src/core/lily/parser/ast/stmt/block.c
    ${CMAKE_SOURCE_DIR}/src/core/lily/parser/ast/stmt/break.c
    ${CMAKE_SOURCE_DIR}/src/core/lily/parser/ast/stmt/defer.c
    ${CMAKE_SOURCE_DIR}/src/core/lily/parser/ast/stmt/drop.c
    ${CMAKE_SOURCE_DIR}/src/core/lily/parser/ast/stmt/for.c
    ${CMAKE_SOURCE_DIR}/src/core/lily/parser/ast/stmt/if.c
    ${CMAKE_SOURCE_DIR}/src/core/lily/parser/ast/stmt/match.c
    ${CMAKE_SOURCE_DIR}/src/core/lily/parser/ast/stmt/next.c
    ${CMAKE_SOURCE_DIR}/src/core/lily/parser/ast/stmt/raise.c
    ${CMAKE_SOURCE_DIR}/src/core/lily/parser/ast/stmt/return.c
    ${CMAKE_SOURCE_DIR}/src/core/lily/parser/ast/stmt/try.c
    ${CMAKE_SOURCE_DIR}/src/core/lily/parser/ast/stmt/unsafe.c
    ${CMAKE_SOURCE_DIR}/src/core/lily/parser/ast/stmt/variable.c
    ${CMAKE_SOURCE_DIR}/src/core/lily/parser/ast/stmt/while.c
    ${CMAKE_SOURCE_DIR}/src/core/lily/parser/ast/capture.c
    ${CMAKE_SOURCE_DIR}/src/core/lily/parser/ast/data_type.c
    ${CMAKE_SOURCE_DIR}/src/core/lily/parser/ast/decl.c
    ${CMAKE_SOURCE_DIR}/src/core/lily/parser/ast/expr.c
    ${CMAKE_SOURCE_DIR}/src/core/lily/parser/ast/field.c
    ${CMAKE_SOURCE_DIR}/src/core/lily/parser/ast/field_object.c
    ${CMAKE_SOURCE_DIR}/src/core/lily/parser/ast/generic_param.c
    ${CMAKE_SOURCE_DIR}/src/core/lily/parser/ast/impl_param.c
    ${CMAKE_SOURCE_DIR}/src/core/lily/parser/ast/inherit_param.c
    ${CMAKE_SOURCE_DIR}/src/core/lily/parser/ast/pattern.c
    ${CMAKE_SOURCE_DIR}/src/core/lily/parser/ast/stmt.c
    ${CMAKE_SOURCE_DIR}/src/core/lily/parser/ast/variant.c
    ${CMAKE_SOURCE_DIR}/src/core/lily/parser/parser.c)

add_library(
  lily_core_lily_parser STATIC
  ${LILY_CORE_LILY_PARSER_SRC}
  ${CMAKE_SOURCE_DIR}/src/ex/lib/lily_core_lily_parser.c)
target_link_libraries(lily_core_lily_parser PRIVATE lily_core_lily_preparser
                                                    lily_core_lily_shared)
target_include_directories(lily_core_lily_parser PRIVATE ${LILY_INCLUDE})
